<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:motion="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.android.politicalpreparedness.representative.RepresentativeViewModel" />
    </data>

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutDescription="@xml/fragment_representative_scene">

        <TextView
            android:id="@+id/textSearchTitle"
            style="@style/text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/micro_space"
            android:layout_marginTop="@dimen/small_space"
            android:text="@string/search_representative"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextAddressLine1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/address_line_1"
            android:inputType="textPostalAddress"
            android:text="@={viewModel.address.line1}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textSearchTitle" />

        <EditText
            android:id="@+id/editTextAddressLine2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/address_line_2"
            android:inputType="textPostalAddress"
            android:text="@={viewModel.address.line2}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextAddressLine1" />

        <EditText
            android:id="@+id/editTextCity"
            android:layout_width="@dimen/default_width"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/city"
            android:inputType="textPostalAddress"
            android:text="@={viewModel.address.city}"
            app:layout_constraintEnd_toStartOf="@id/spinnerState"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextAddressLine2" />

        <Spinner
            android:id="@+id/spinnerState"
            android:layout_width="@dimen/default_width"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:inputType="textPostalAddress"
            app:layout_constraintBottom_toBottomOf="@id/editTextCity"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/editTextCity"
            app:layout_constraintTop_toTopOf="@id/editTextCity" />

        <EditText
            android:id="@+id/editTextZip"
            android:layout_width="@dimen/default_width"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/zip"
            android:inputType="number"
            android:maxLength="5"
            android:text="@={viewModel.address.zip}"
            app:layout_constraintEnd_toEndOf="@id/editTextCity"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextCity" />

        <Button
            android:id="@+id/buttonSearch"
            style="@style/primary_button"
            android:layout_width="match_parent"
            android:layout_marginStart="@dimen/micro_space"
            android:layout_marginTop="@dimen/small_space"
            android:layout_marginEnd="@dimen/micro_space"
            android:text="@string/search"
            app:layout_constraintTop_toBottomOf="@id/editTextZip" />

        <Button
            android:id="@+id/buttonLocation"
            style="@style/primary_button"
            android:layout_width="match_parent"
            android:layout_marginStart="@dimen/micro_space"
            android:layout_marginEnd="@dimen/micro_space"
            android:text="@string/use_my_location"
            app:layout_constraintTop_toBottomOf="@id/buttonSearch" />

        <TextView
            android:id="@+id/textRepresentativeTitle"
            style="@style/text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/micro_space"
            android:layout_marginTop="@dimen/small_space"
            android:text="@string/representatives"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/buttonLocation" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerRepresentatives"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/big_space"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textRepresentativeTitle" />

        <TextView
            android:id="@+id/textListPlaceholder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textAlignment="center"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textRepresentativeTitle"
            motion:visibilityMode="ignore" />

    </androidx.constraintlayout.motion.widget.MotionLayout>
</layout>
